<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="charmingdev.d.c3.Login"
    android:orientation="vertical">
    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="10dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back_white_24dp"
            android:id="@+id/back"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:text="@string/string_login"
            android:textColor="@color/colorPlain"
            android:theme="@style/opensans_semi_bold"/>
    </Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/deView"
        android:layout_marginTop="30dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:drawableLeft="@drawable/ic_person_off_24dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:id="@+id/email"
                android:hint="@string/userOrEmail"
                android:drawablePadding="15dp"
                android:theme="@style/opensans_light"
                android:inputType="textEmailAddress"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:drawableLeft="@drawable/ic_lock_off_24dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:id="@+id/password"
                android:hint="@string/password"
                android:drawablePadding="15dp"
                android:theme="@style/opensans_light"
                android:inputType="textPassword"
                android:layout_marginTop="30dp"
                />
            <TextView
                android:id="@+id/forget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_dark_custom_fragment_1"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_gravity="right"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:text="@string/forgetPassword"
                android:textSize="16sp"
                android:theme="@style/opensans_bold"/>
            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:background="@color/colorAccent"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:theme="@style/opensans_bold"
                android:textColor="@color/colorPlain"
                android:text="@string/login"/>
            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:columnCount="2"
                android:layout_gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:text="@string/newOn"
                    android:textSize="16sp"
                    android:theme="@style/opensans_light"
                    android:textColor="@color/colorPrimary"/>
                <TextView
                    android:id="@+id/signUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:text="@string/signUp"
                    android:textSize="16sp"
                    android:theme="@style/opensans_semi_bold"
                    android:textColor="@color/color_dark_custom_fragment_1"
                    android:layout_marginLeft="10dp"/>
            </GridLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>