<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="charmingdev.d.c3.Settings"
    android:orientation="vertical">

    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="10dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back_white_24dp"
            android:id="@+id/back"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:text="@string/my_account"
            android:textColor="@color/colorPlain"
            android:theme="@style/opensans_semi_bold"/>
    </Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/deView">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:paddingRight="15dp"
                android:paddingLeft="20dp"
                android:background="@drawable/border_bottom_off"
                android:text="@string/account_settings"
                android:textColor="@color/colorPrimaryDark"
                android:theme="@style/opensans_semi_bold"
                android:textSize="20sp"
                />
            <TextView
                android:id="@+id/myProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:paddingRight="15dp"
                android:paddingLeft="20dp"
                android:background="@drawable/border_bottom_plain"
                android:text="@string/myProfile"
                android:textColor="@color/colorPrimaryDark"
                android:theme="@style/opensans_semi_bold"
                />
            <TextView
                android:id="@+id/myAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:paddingRight="15dp"
                android:paddingLeft="20dp"
                android:background="@drawable/border_bottom_plain"
                android:text="@string/myAddress"
                android:textColor="@color/colorPrimaryDark"
                android:theme="@style/opensans_semi_bold"
                />
            <TextView
                android:id="@+id/myRatings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:paddingRight="15dp"
                android:paddingLeft="20dp"
                android:background="@drawable/border_bottom_plain"
                android:text="@string/myRatings"
                android:textColor="@color/colorPrimaryDark"
                android:theme="@style/opensans_semi_bold"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:paddingRight="15dp"
                android:paddingLeft="20dp"
                android:background="@drawable/border_bottom_off"
                android:text="@string/notification_settings"
                android:textColor="@color/colorPrimaryDark"
                android:theme="@style/opensans_semi_bold"
                android:textSize="20sp"
                />
            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:background="@drawable/border_bottom_plain"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:paddingRight="15dp"
                android:paddingLeft="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pushNotifications"
                    android:textColor="@color/colorPrimaryDark"
                    android:theme="@style/opensans_semi_bold"
                    android:layout_columnWeight="1"
                    />
                <Switch
                    android:id="@+id/notification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    />
            </GridLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>