<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="charmingdev.d.c3.Register"
    android:orientation="vertical"
    android:paddingBottom="30dp">

    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="10dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back_white_24dp"
            android:id="@+id/back"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:text="@string/title_register"
            android:textColor="@color/colorPlain"
            android:theme="@style/opensans_semi_bold"/>
    </Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/deView"
        android:layout_marginTop="30dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/regDesc"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:textSize="18sp"
                android:theme="@style/opensans_light"
                android:textColor="@color/colorPrimaryDark"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_columnWeight="1"
                android:hint="@string/hint_firstname"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:textColor="@color/colorPrimary"
                android:id="@+id/fname"
                android:drawableLeft="@drawable/ic_person_off_24dp"
                android:drawablePadding="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_columnWeight="1"
                android:hint="@string/hint_lname"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:textColor="@color/colorPrimary"
                android:id="@+id/lname"
                android:drawableLeft="@drawable/ic_person_off_24dp"
                android:drawablePadding="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:drawableLeft="@drawable/ic_email_black_24dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:id="@+id/email"
                android:hint="@string/email"
                android:drawablePadding="15dp"
                android:theme="@style/opensans_light"
                android:inputType="textEmailAddress"
                android:layout_marginTop="30dp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:drawableLeft="@drawable/ic_lock_off_24dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:id="@+id/password"
                android:hint="@string/password"
                android:drawablePadding="15dp"
                android:theme="@style/opensans_light"
                android:inputType="textPassword"
                android:layout_marginTop="30dp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:drawableLeft="@drawable/ic_lock_off_24dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:id="@+id/cpassword"
                android:hint="@string/cPassword"
                android:drawablePadding="15dp"
                android:theme="@style/opensans_light"
                android:inputType="textPassword"
                android:layout_marginTop="30dp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:drawableLeft="@drawable/ic_phone_android_off_24dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:id="@+id/phone"
                android:hint="@string/phone"
                android:drawablePadding="15dp"
                android:theme="@style/opensans_light"
                android:inputType="phone"
                android:layout_marginTop="30dp"
                />
            <Button
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:background="@color/colorAccent"
                android:layout_marginTop="20dp"
                android:textSize="16sp"
                android:theme="@style/opensans_bold"
                android:textColor="@color/colorPlain"
                android:text="@string/title_register"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>