<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="charmingdev.d.c3.Profile"
    android:orientation="vertical">

    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="10dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back_white_24dp"
            android:id="@+id/back"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:text="@string/my_profile"
            android:textColor="@color/colorPlain"
            android:theme="@style/opensans_semi_bold"/>
    </Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/deView">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:paddingRight="15dp"
                android:paddingLeft="20dp"
                android:background="@drawable/border_bottom_off"
                android:text="@string/myPersonalData"
                android:textColor="@color/colorPrimaryDark"
                android:theme="@style/opensans_semi_bold"
                android:textSize="20sp"
                />

           <android.support.design.widget.TextInputLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:textSize="15sp"
               android:paddingBottom="10dp"
               android:paddingTop="10dp"
               android:layout_marginRight="20dp"
               android:layout_marginLeft="20dp">
               <EditText
                   android:id="@+id/fname"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:paddingRight="10dp"
                   android:paddingBottom="12dp"
                   android:paddingTop="12dp"
                   android:textColor="@color/colorPrimary"
                   android:hint="@string/hint_firstname"
                   android:inputType="text"
                   android:textSize="15sp"
                   android:drawableLeft="@drawable/ic_person_off_24dp"
                   android:drawablePadding="10dp"
                   />
           </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp">
                <EditText
                    android:id="@+id/lname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:paddingBottom="12dp"
                    android:paddingTop="12dp"
                    android:textColor="@color/colorPrimary"
                    android:hint="@string/hint_lname"
                    android:inputType="text"
                    android:textSize="15sp"
                    android:drawableLeft="@drawable/ic_person_off_24dp"
                    android:drawablePadding="10dp"
                    />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_columnWeight="1">
                <EditText
                    android:drawablePadding="10dp"
                    android:drawableLeft="@drawable/ic_email_black_24dp"
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:paddingBottom="12dp"
                    android:paddingTop="12dp"
                    android:textColor="@color/colorPrimary"
                    android:hint="@string/email"
                    android:inputType="none"
                    android:textSize="15sp"
                    />
            </android.support.design.widget.TextInputLayout>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:id="@+id/gender">

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="1"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/female" />
            </RadioGroup>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp">
                <EditText
                    android:drawablePadding="10dp"
                    android:drawableLeft="@drawable/ic_phone_android_off_24dp"
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:paddingBottom="12dp"
                    android:paddingTop="12dp"
                    android:textColor="@color/colorPrimary"
                    android:hint="@string/phone"
                    android:inputType="phone"
                    android:textSize="15sp"
                    />
            </android.support.design.widget.TextInputLayout>
            <Button
                android:id="@+id/save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:background="@color/colorAccent"
                android:layout_marginTop="20dp"
                android:textSize="16sp"
                android:theme="@style/opensans_bold"
                android:textColor="@color/colorPlain"
                android:text="@string/save"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>